# game-of-life

./: .gitignore  Caddyfile  Cargo.toml  index.html  now.json  package.json  readme.md  style.css  tsconfig.json  webpack.config.js
app/client/game/: Cargo.toml  game.html  game.js  game.ts
app/client/game/src/: canvas_view.rs  generation.rs  grid.rs  lib.rs
app/client/game/src/canvas_view/: constant.rs  js.rs  view.rs
app/scripts/: build.sh  prepare_env.sh  run.sh  test.sh
html/: index.html
js/: index.js
script/: build.sh  prepare_env.sh
scripts/: build.sh  deploy.sh  prepare_env.sh  run.sh  test.sh
src/: constant.rs  controller.rs  coordinate_translator.rs  entrypoint.rs  game.ts  generation.rs  generation_calculator.rs  grid.rs  grid_info.rs  input_handler.rs  interactive_game.rs  lib.rs
src/canvas/: canvas_coordinate_translator.rs  constant.rs  game.rs  mod.rs  presenter.rs
src/canvas/presenter/: mod.rs  presenter.rs
src/canvas/view/: game.ts  mod.rs  view.rs
src/canvas/view/js/: adapter.rs  console.rs  js.rs  mod.rs
src/canvas_view/: constant.rs  js.rs  mod.rs  view.rs
